Add a comment to indicate that the script tag in each page is from fontawesome.com

--- a/contact.html
+++ b/contact.html
@@ -87,6 +87,7 @@
             </li>
         </ul>
     </footer>
+    <!-- Script acquired from fontawesome.com for social icons -->
     <script src="https://kit.fontawesome.com/7f6a607fdc.js" crossorigin="anonymous"></script>
 </body>
 </html>
