--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <header>
         <div id="hero-image">
             <div id="logo">
-                <div id="log-text-container">
+                <div id="logo-text-container">
                     <h1>Forster</h1>
                     <h2>& The Mustard Cutters</h2>
                 </div>
@@ -69,6 +69,7 @@
             </li>
         </ul>
     </footer>
+    <!-- Script acquired from fontawesome.com for social icons -->
     <script src="https://kit.fontawesome.com/7f6a607fdc.js" crossorigin="anonymous"></script>
 </body>
 </html>
