Add aria labelledby attributes to about bios for accessible page navigation.

--- a/about.html
+++ b/about.html
@@ -51,9 +51,9 @@
     <main>
         <section id="about-body">
             <h3>Meet the band.</h3>
-            <div class="about-bio">
+            <div class="about-bio" aria-labelledby="hannah-forster">
                 <div class="about-bio-left bio-text">
-                    <h3>Hannah Forster</h3>
+                    <h3 id="hannah-forster">Hannah Forster</h3>
                     <p>The Forster to our mustard cutters. Hannah is the one that people actually like.</p>
                 </div>
                 <div class="about-bio-right bio-pic">
@@ -61,19 +61,19 @@
                 </div>
             </div>
             <hr>
-            <div class="about-bio">
+            <div class="about-bio" aria-labelledby="andy-silk">
                 <div id="bio-pic2" class="about-bio-left bio-pic">
                     <img src="assets/images/sitephotos/andybio.jpg" alt="A profile picture of Andy playing the keyboard and singing at one of the band's gigs" class="bio-pic-left">
                 </div>
                 <div class="about-bio-right bio-text">
-                    <h3>Andy 'Silky' Silk</h3>
+                    <h3 id="andy-silk">Andy 'Silky' Silk</h3>
                     <p>Not just a pretty face. Andy brings silky backing vocals as well as mad keys skills.</p>
                 </div>
             </div>
             <hr>
-            <div class="about-bio">
+            <div class="about-bio" aria-labelledby="joe-crossley">
                 <div class="about-bio-left bio-text">
-                    <h3>Joe Crossley</h3>
+                    <h3 id="joe-crossley">Joe Crossley</h3>
                     <p>Unanimously agreed that Joe is the most musically gifted in the band.</p>
                 </div>
                 <div class="about-bio-right bio-pic">
@@ -81,19 +81,19 @@
                 </div>
             </div>
             <hr>
-            <div class="about-bio">
+            <div class="about-bio" aria-labelledby="harry-wilkinson">
                 <div class="about-bio-left bio-pic">
                     <img src="assets/images/sitephotos/Harrybass2018.jpg" alt="A profile picture of Harry playing the bass guitar at one of the band's gigs" class="bio-pic-left">
                 </div>
                 <div class="about-bio-right bio-text">
-                    <h3>Harry Wilkinson</h3>
+                    <h3 id="harry-wilkinson">Harry Wilkinson</h3>
                     <p>The outrageousness of Harry's bass licks are matched only by the expressions on his face...</p>
                 </div>
             </div>
             <hr>
-            <div class="about-bio">
+            <div class="about-bio" aria-labelledby="ben-degaris">
                 <div class="about-bio-left bio-text">
-                    <h3>Ben DeGaris (Deej)</h3>
+                    <h3 id="ben-degaris">Ben DeGaris (Deej)</h3>
                     <p>Ben plays drums. Occasionally he remembers to bring sticks.</p>
                 </div>
                 <div class="about-bio-right bio-pic">
@@ -101,12 +101,12 @@
                 </div>
             </div>
             <hr>
-            <div class="about-bio">
+            <div class="about-bio" aria-labelledby="brass-section">
                 <div id="bio-pic5" class="about-bio-left bio-pic">
                     <img src="assets/images/sitephotos/brasssection2019.jpg" alt="A picture of the three brass players posing for a photo together at a black tie event in Durham" class="bio-pic-left">
                 </div>
                 <div class="about-bio-right bio-text">
-                    <h3>The Brass Section</h3>
+                    <h3 id="brass-section">The Brass Section</h3>
                     <p>The less said about this lot the better. We only let them play with us because they're a laugh.</p>
                 </div>
             </div>
