--- a/reviews.html
+++ b/reviews.html
@@ -47,30 +47,30 @@
     <!--A series of reviews of the band and assorted pictures of the band performing-->
     <main>
         <section class="reviews-section">
-            <div>
+            <div aria-labelledby="harry-sally">
                 <p class="review">“They were great at our wedding! Got the whole crowd dancing!”</p>
-                <p class="customer"><em>Harry & Sally, June 2021</em></p>
+                <p class="customer" id="harry-sally"><em>Harry & Sally, June 2021</em></p>
             </div>
             <div id="review-image1">
                 <img src="assets/images/sitephotos/deejdidsomethingdaft.jpg" alt="A picture of the band onstage with their instruments, laughing at the drummer; Ben.">
             </div>
-            <div>
+            <div aria-labelledby="june-ball">
                 <p class="review">“We loved them at our summer ball! They brought so much energy to the event!”</p>
-                <p class="customer"><em>June Ball, June 2019</em></p>
+                <p class="customer" id="june-ball"><em>June Ball, June 2019</em></p>
             </div>
             <div id="review-image2">
                 <img src="assets/images/sitephotos/HannahandHarry2018.jpg" alt="A picture of Hannah and Harry onstage performing during a big live event in a marquee.">
             </div>
-            <div>
+            <div aria-labelledby="bailey-ball">
                 <p class="review">“Great to have two fellow St John's college members rocking it onstage!”</p>
-                <p class="customer"><em>Bailey Ball Chair, Nov 2018</em></p>
+                <p class="customer" id="bailey-ball"><em>Bailey Ball Chair, Nov 2018</em></p>
             </div>
             <div id="review-image3">
                 <img src="assets/images/sitephotos/Juneball2019lensflare.jpg" alt="A picture of the band performing at University College's June Ball, and the disco lighting causes a lens flare on the image.">
             </div>
-            <div>
+            <div aria-labelledby="charis-cheeseman">
                 <p class="review">“Provided the perfect entertainment for our event and guest speaker. Fun and light-hearted, but great music too.”</p>
-                <p class="customer"><em>Charis Cheeseman, Feb 2018</em></p>
+                <p class="customer" id="charis-cheeseman"><em>Charis Cheeseman, Feb 2018</em></p>
             </div>
         </section>
         <section id="book-now">
