update alt attributes for about imgs to be more descriptive.

--- a/about.html
+++ b/about.html
@@ -57,7 +57,7 @@
                     <p>The Forster to our mustard cutters. Hannah is the one that people actually like.</p>
                 </div>
                 <div class="about-bio-right bio-pic">
-                    <img src="assets/images/sitephotos/hannahbio.jpg" alt="A profile picture of Hannah Forster (the lead singer of the band)" class="bio-pic-right">
+                    <img src="assets/images/sitephotos/hannahbio.jpg" alt="A profile picture of Hannah Forster by the seaside (the lead singer of the band)" class="bio-pic-right">
                 </div>
             </div>
             <hr>
@@ -97,7 +97,7 @@
                     <p>Ben plays drums. Occasionally he remembers to bring sticks.</p>
                 </div>
                 <div class="about-bio-right bio-pic">
-                    <img src="assets/images/sitephotos/deejbio.jpg" alt="A profile picture of Ben (the drummer of the band)" class="bio-pic-right">
+                    <img src="assets/images/sitephotos/deejbio.jpg" alt="A profile picture of Ben (the drummer of the band) at a coffee shop" class="bio-pic-right">
                 </div>
             </div>
             <hr>
