change submit/reset input elements in contact form to buttons.

--- a/contact.html
+++ b/contact.html
@@ -70,8 +70,8 @@
                 <label for="60min">60 Minutes</label><br>
                 <textarea name="more-info" id="more-info" cols="30" rows="18" required 
                  placeholder="Tell us more about your event: location, budget, sound and lighting requirements etc..."></textarea><br>
-                <input type="submit" id="submit" value="Submit">
-                <input type="reset" id="reset" value="Reset">
+                <button type="submit" id="submit">Book Now</button>
+                <button type="reset" id="reset">Reset</button>
             </form>
         </section>
     </main>
