add role='button' and aria labels to 'book now' links in about, reviews and media pages.

--- a/media.html
+++ b/media.html
@@ -67,7 +67,7 @@
             </section>
         </section>
         <section id="book-now">
-            <p>Like what you hear?<a href="contact.html"><span>Book Us Now</span></a></p>
+            <p>Like what you hear?<a href="contact.html" role="button" aria-label="A button that links to the contact page (opens in the same window)"><span>Book Us Now</span></a></p>
         </section>
     </main>
     <!--Footer with social links-->
