--- a/reviews.html
+++ b/reviews.html
@@ -74,7 +74,7 @@
             </div>
         </section>
         <section id="book-now">
-            <p>Want us to play at your event?<br><a href="contact.html"><span>Book Us Now</span></a></p>
+            <p>Want us to play at your event?<br><a href="contact.html" role="button" aria-label="A button that links to the contact page (opens in the same window)"><span>Book Us Now</span></a></p>
         </section>
     </main>
     <!--Social links-->
