--- a/about.html
+++ b/about.html
@@ -113,7 +113,7 @@
         </section>
         <!--A call to action/link to the contact page-->
         <section id="book-now">
-            <p>Like what you see?<a href="contact.html"><span>Book Us Now</span></a></p>
+            <p>Like what you see?<a href="contact.html" role="button" aria-label="A button that links to the contact page (opens in the same window)"><span>Book Us Now</span></a></p>
         </section>
     </main>
         <!--Social links-->
