add role='button' and aria label to enter site button and restyle to be more obvious.

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <p>“Durham's no.1 function band...”  <br> - <em>The Northern Echo</em></p>
             </div>
             <div id="enter-site-button">
-                <a href="#nav-home"><p>Enter site  </p><i class="fa-sharp fa-solid fa-arrow-down"></i></a>
+                <a href="#nav-home" role="button" aria-label="A button that scrolls all the way down past the hero image and quote text in order to access the navigation section of the home page.">Enter site</a>
             </div>
         </div>
     </header>
