update image hrefs in html code to new image file names.

--- a/media.html
+++ b/media.html
@@ -42,6 +42,7 @@
     <!--Page title-->
     <header id="media-header">
         <h2>Give us a listen.</h2>
+        <p>Check out some of the media below to hear our band playing at recent live events. We love to play a wide range of music </p>
     </header>
     <!--Main body of the page-->
     <main>
