add content and image to the header of the media html file.

--- a/media.html
+++ b/media.html
@@ -42,7 +42,17 @@
     <!--Page title-->
     <header id="media-header">
         <h2>Give us a listen.</h2>
-        <p>Check out some of the media below to hear our band playing at recent live events. We love to play a wide range of music </p>
+        <p>Here are some recordings of some of our recent live events. We love to play a wide range of popular music including:</p>
+        <img src="assets/images/sitephotos/hannah-and-harry-2018.jpg" alt="A photo of harry and hannah performing onstage at the 2018 event called Human">
+        <ul>
+            <li>Stevie Wonder</li>
+            <li>The Jackson 5</li>
+            <li>Bruno Mars</li>
+            <li>Toto</li>
+            <li>Hall and Oates</li>
+            <li>And many more!...</li>
+        </ul>
+        <p>On request we also create our own arrangements of <strong>your favourite tunes!</strong> Check out our cover of <em>Disco Yes</em> and <em>Isn't She Lovely</em> below: </p>
     </header>
     <!--Main body of the page-->
     <main>
