Fix: make border at the bottom of reviews-section fit whole screen width, add durham photo.

--- a/reviews.html
+++ b/reviews.html
@@ -73,7 +73,7 @@
                 <p class="customer" id="charis-cheeseman"><em>Charis Cheeseman, Feb 2018</em></p>
             </div>
         </section>
-        <section id="book-now">
+        <section id="book-now" class="review-book-section">
             <p>Want us to play at your event?<br><a href="contact.html" role="button" aria-label="A button that links to the contact page (opens in the same window)"><span>Book Us Now</span></a></p>
         </section>
     </main>
