Add: change background to hero image to a picture of Durham's castle at night.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 <body>
     <!--Home page header/landing page. This takes up the viewport and includes a small button to enter the rest of the home page-->
-    <header>
+    <header id="home-header">
         <div id="hero-image">
             <div id="logo">
                 <div id="logo-text-container">
