--- a/contact.html
+++ b/contact.html
@@ -46,6 +46,11 @@
             <p>Fill out the contact form below. We'll aim to get back to you within 5 business days with confirmation of our availability and a pricing quote.<p>
         </div>
         <div id="contact-header-image">
+            <picture>
+                <source srcset="" media="(max-width: 600px)">
+                <source srcset="" media="(min-width: 601px)">
+                <img src="assets/images/sitephotos/june-ball-2019-venue.jpg" alt="An image of a gig from the perspective of the stage, looking out over the venue lit up for a disco.">
+            </picture>
             <img src="assets/images/sitephotos/june-ball-2019-venue.jpg" alt="An image of a gig from the perspective of the stage, looking out over the venue lit up for a disco.">
         </div>
         <div id="contact-header-underline"></div>
