add durham cathedral jpg as source for contact header pic on screens 600px wide and above.

--- a/contact.html
+++ b/contact.html
@@ -47,11 +47,10 @@
         </div>
         <div id="contact-header-image">
             <picture>
-                <source srcset="" media="(max-width: 600px)">
-                <source srcset="" media="(min-width: 601px)">
+                <source srcset="assets/images/sitephotos/durham-cathedral-night.jpg" media="(min-width: 601px)">
                 <img src="assets/images/sitephotos/june-ball-2019-venue.jpg" alt="An image of a gig from the perspective of the stage, looking out over the venue lit up for a disco.">
             </picture>
-            <img src="assets/images/sitephotos/june-ball-2019-venue.jpg" alt="An image of a gig from the perspective of the stage, looking out over the venue lit up for a disco.">
+            <!--<img src="assets/images/sitephotos/june-ball-2019-venue.jpg" alt="An image of a gig from the perspective of the stage, looking out over the venue lit up for a disco."> -->
         </div>
         <div id="contact-header-underline"></div>
     </header>
