add copyright noice to page footer and add styling.

--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
                 <a href="https://soundcloud.com/andrew-silk-743237145/sets/human-gig" target="_blank" rel="noopener" aria-label="Visit our Soundcloud page (opens in a new tab)"><i class="fa-brands fa-soundcloud"></i></a>
             </li>
         </ul>
+        <p id="copyright">Copyright © Forster and the Mustard Cutters: 2022.</p>
     </footer>
     <!-- Script acquired from fontawesome.com for social icons -->
     <script src="https://kit.fontawesome.com/7f6a607fdc.js" crossorigin="anonymous"></script>
