Add error message and homepage linkt to 404 page.

--- a/404.html
+++ b/404.html
@@ -40,9 +40,9 @@
         <hr>
     </nav>
     <!--Thanks message-->
-    <main id="thanks-message">
-        <h2>Thanks for your message.</h2>
-        <p>One of the band's members will be in contact via email within the next 5 business days.</p>
+    <main id="error-message">
+        <h2>Oops! Looks like this page doesn't exist...</h2>
+        <a href="#index.html">Click here to return to the homepage.</a>
     </main>
     <!--Social links-->
     <footer>
