--- a/reviews.html
+++ b/reviews.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Function band based in Durham, UK">
-    <meta name="keywords" content="music, pop music, wedding band, durham,">
+    <meta name="keywords" content="music, pop music, wedding band, durham, event, party, ball">
     <title>Forster & The Mustard Cutters</title>
     <link rel="stylesheet" href="assets/css/style.css">
     <!-- code from favicon.io which links custom favicon to the web page -->
