add more comments to explain html code.

--- a/404.html
+++ b/404.html
@@ -39,7 +39,7 @@
         </ul>
         <hr>
     </nav>
-    <!--Thanks message-->
+    <!--error message to display in case a page link breaks-->
     <main id="error-message">
         <h2>Oops! Looks like this page doesn't exist...</h2>
         <a href="#index.html">Click here to return to the homepage.</a>
