--- a/contact.html
+++ b/contact.html
@@ -53,6 +53,7 @@
         </div>
         <div id="contact-header-underline"></div>
     </header>
+    <!--Contact form-->
     <main id="contact-background">
         <section id="contact-form-container">
             <section id="contact-form">
