--- a/media.html
+++ b/media.html
@@ -39,7 +39,7 @@
         </ul>
         <hr>
     </nav>
-    <!--Page title-->
+    <!--Page title and info about the music we play-->
     <header id="media-header">
         <h2>Give us a listen.</h2>
         <p>Here are some recordings of some of our recent live events. We love to play a wide range of popular music including:</p>
@@ -54,7 +54,7 @@
         </ul>
         <p>On request we also create our own arrangements of <strong>your favourite tunes!</strong> Check out our cover of <em>Disco Yes</em> and <em>Isn't She Lovely</em> below: </p>
     </header>
-    <!--Main body of the page-->
+    <!--Main body of the page: video and embedded soundcloud player-->
     <main>
         <section id="media-section">
             <section id="video-section">
