--- a/thanks.html
+++ b/thanks.html
@@ -39,7 +39,7 @@
         </ul>
         <hr>
     </nav>
-    <!--Thanks message-->
+    <!--Thanks message to appear when form successfully submitted-->
     <main id="thanks-message">
         <h2>Thanks for your message.</h2>
         <p>One of the band's members will be in contact via email within the next 5 business days.</p>
