--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 <body>
     <!--Home page header/landing page. This takes up the viewport and includes a small button to enter the rest of the home page-->
     <header id="home-header">
+        <!--hero image & Logo-->
         <div id="hero-image">
             <div id="logo">
                 <div id="logo-text-container">
