add label to textarea element in form and alter placeholder text.

--- a/contact.html
+++ b/contact.html
@@ -73,8 +73,9 @@
                     <label for="45min">45 Minutes</label><br>
                     <input type="radio" name="set-length" id="60min" value="60minutes">
                     <label for="60min">60 Minutes</label><br>
+                    <label for="more-info">Please tell us more about your event:</label>
                     <textarea name="more-info" id="more-info" cols="25" rows="18" required 
-                    placeholder="Tell us more about your event: location, budget, sound and lighting requirements etc..."></textarea><br>
+                    placeholder="location, budget, sound and lighting requirements etc..."></textarea><br>
                     <button type="submit" id="submit">Book Now</button>
                     <button type="reset" id="reset">Reset</button>
                 </form>
